@@ -1455,6 +1455,8 @@
 2423,1000,1000,15000,0,40000:80000:120000:240000:360000,0
 //-- WM_RANDOMIZESPELL
 2424,0,1000,2000,0,0,0
+//-- WM_GLOOMYDAY
+2425,1000,1000,3000,0,15000:30000:45000:60000:75000,0
 //-- WM_GREAT_ECHO
 2426,1000,0,5000,0,0,0
 //-- WM_SONG_OF_MANA
