@@ -1064,7 +1064,7 @@
 2308,7,6,1,-1,0,0,10,1,yes,0,0,0,weapon,0,		LG_BANISHINGPOINT,Banishing Point
 2309,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_TRAMPLE,Trample
 2310,3,6,1,0,0,0,5,1,no,0,0,0,weapon,0,		LG_SHIELDPRESS,Shield Press
-2311,0,6,4,0,0x03,2,5,1,no,0,0,0,none,0,		LG_REFLECTDAMAGE,Reflect Damage
+2311,0,6,4,0,0x03,3,5,1,no,0,0,0,none,0,		LG_REFLECTDAMAGE,Reflect Damage
 2312,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		LG_PINPOINTATTACK,Pinpoint Attack
 2313,0,6,4,0,0x01,0,5,1,no,0,0,0,weapon,0,		LG_FORCEOFVANGUARD,Force of Vanguard
 2314,2,6,1,0,0,0,1,1,no,0,0,0,weapon,0,		LG_RAGEBURST,Rage Burst
@@ -1129,7 +1129,7 @@
 2422,8,6,2,0,0x3,5:6:7:8:9,5,1,yes,0,0,0,misc,0,		WM_LULLABY_DEEPSLEEP,Deep Sleep Lullaby
 2423,0,6,4,0,0x3,-1,5,1,no,0,0,0,none,0,		WM_SIRCLEOFNATURE,Circle of Nature's Sound
 2424,0,6,4,0,0x1,0,5,1,yes,0,0,0,magic,0,		WM_RANDOMIZESPELL,Improvised Song
-2425,0,0,0,0,0,0,5,0,no,0,0,0,none,0,		WM_GLOOMYDAY,Gloomy Day
+2425,5,6,1,0,0,0,5,1,yes,0,0,0,none,0,		WM_GLOOMYDAY,Gloomy Day
 2426,9,6,2,-1,0x2,2:3:3:4:4,5,1,no,0,0x2000,0,weapon,0,		WM_GREAT_ECHO,Great Echo
 2427,0,6,4,0,0x3,-1,5,0,no,0,0x2000,0,none,0,		WM_SONG_OF_MANA,Song of Mana
 2428,0,6,4,0,0x3,-1,5,1,no,0,0x2000,0,none,0,		WM_DANCE_WITH_WUG,Dance With A Warg
